--- a/mocker-back/src/main/resources/application.yaml
+++ b/mocker-back/src/main/resources/application.yaml
@@ -35,6 +35,7 @@ spring:
 server:
   port: 8080
   ssl:
+    enabled: true
     key-store-type: PKCS12
     key-store: /root/MOCKER/mocker-back/keystore.p12
     key-store-password: mocker-console
