--- a/mocker-back/src/main/resources/application.yaml
+++ b/mocker-back/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://mocker-db-do-user-14218649-0.b.db.ondigitalocean.com:25060/defaultdb
-    username: doadmin
-    password: AVNS_93oRkRmBKYjfgOXE2Qa
+    url: jdbc:postgresql://localhost:8080/mocker_db
+    username: mocker_user
+    password: mocker_password
   jpa:
     properties:
       hibernate:
@@ -37,9 +37,6 @@ server:
   ssl:
     enabled: true
     key-store-type: PKCS12
-    key-store: /root/MOCKER/mocker-back/keystore.p12
+    key-store: C:\Workspace\repository\MOCKER\mocker-back\keystore.p12
     key-store-password: mocker-console
     key-alias: mocker
-    trust-store-type: PKCS12
-    trust-store: /root/MOCKER/mocker-back/keystore.p12
-    trust-store-password: mocker-console
